# ambience

./: .clang-format  .clang-tidy  .cmake-format.yaml  .drone.yml  .gitignore  CMakeLists.txt  Dockerfile.ci  Doxyfile  LICENSE  Readme.adoc  Readme.md  Readme.ts  Todo.txt  exec.py  library.properties  main.cpp  prog.py  run-clang-tidy.py  switch_clangd.sh
ambience/: CMakeLists.txt
ambience/ambictl/: build.py  db.py  dump_services.py  gen_group.py  graph.py  mkbuild.py  requirements.txt
ambience/boot/: CMakeLists.txt  Readme.adoc  aeboot.yaml  common.cpp  stm32.cpp
ambience/docs/: onboarding.adoc
ambience/kernel_space/: CMakeLists.txt  stub.cpp
ambience/services/: CMakeLists.txt
ambience/src/: common.cpp  rings.cpp
ambience/tests/: CMakeLists.txt  ring_tests.cpp
ambience/tools/: create_group.py
ambience/user_space/: CMakeLists.txt  entry.cpp  heap.cpp  sample.cpp  user_space.cpp
config/boards/: CMakeLists.txt  blue-pill.cmake  bluefruit.cmake  board.cpp  board.hpp.in  nodemcu.cmake  stm32l053-disco.cmake
examples/: CMakeLists.txt
examples/alarm/: CMakeLists.txt  main.cpp
examples/app/: CMakeLists.txt  main.cpp
examples/avr_adxl345/: CMakeLists.txt  main.cpp
examples/avr_lcd/: CMakeLists.txt  main.cpp
examples/aws_push/: 2eea4a8659.cert.pem  2eea4a8659.private.key  2eea4a8659.public.key  CMakeLists.txt  axl_adapters.cpp  main.cpp  me.cert.der  me_cert.cpp  priv_key.cpp  priv_key.der  rem.cert.der  rem.cert.pem  rem_cert.cpp  resources.hpp
examples/backtrace/: CMakeLists.txt  main.cpp
examples/bearssl/: CMakeLists.txt  key.pem  keys.hpp  main.cpp
examples/bme280/: CMakeLists.txt  main.cpp
examples/capabilities/: CMakeLists.txt  apps.hpp  common.hpp  esp_main.cpp  main.cpp  monotonic_clock.hpp  x86_main.cpp
examples/cc3235sf/: CMakeLists.txt  main.cpp  socket_base.cpp  socket_runtime.cpp  tcp.cpp  wlan.cpp
examples/clock/: CMakeLists.txt  main.cpp
examples/cmake_example/: CMakeLists.txt  main.cpp
examples/dht11_sample/: CMakeLists.txt  main.cpp
examples/display/: CMakeLists.txt  hosted.cpp
examples/ebpf/: CMakeLists.txt  main.cpp  policy.lidl
examples/epd/: CMakeLists.txt  main.cpp
examples/esp/: CMakeLists.txt  main.cpp
examples/esp_adc/: CMakeLists.txt  main.cpp
examples/esp_adxl345/: CMakeLists.txt  main.cpp
examples/esp_conn/: CMakeLists.txt  main.cpp
examples/esp_fault/: CMakeLists.txt  main.cpp
examples/esp_lwip/: CMakeLists.txt  main.cpp
examples/esp_mqtt/: CMakeLists.txt  axl_adapters.cpp  fake_accel.hpp  main.cpp  sntp.c  time.h
examples/esp_mqtt_ssl/: CMakeLists.txt  main.cpp
examples/esp_spi/: CMakeLists.txt  main.cpp
examples/esp_ssd1306/: CMakeLists.txt  main.cpp
examples/esp_ssl/: CMakeLists.txt  main.cpp
examples/esp_udp/: CMakeLists.txt  main.cpp
examples/esp_zap/: CMakeLists.txt  main.cpp  req_generated.h
examples/fault_handling/: CMakeLists.txt  main.cpp  this_thread.yaml  unpriv.cpp
examples/fs/: CMakeLists.txt  main.cpp
examples/gpio/: CMakeLists.txt  main.cpp
examples/hosted_xbee/: CMakeLists.txt  main.cpp
examples/hx711/: CMakeLists.txt  hx711_demo.cpp
examples/ina219/: CMakeLists.txt  main.cpp
examples/int/: CMakeLists.txt  main.cpp
examples/ism43362/: CMakeLists.txt  main.cpp
examples/mpu/: CMakeLists.txt  bitfield.hpp  main.cpp  mpu.cpp  mpu.hpp
examples/mux/: CMakeLists.txt  mux.cpp
examples/nrf24/: CMakeLists.txt  main.cpp
examples/nrf52/: CMakeLists.txt  bakir_ble.hpp  canvas.hpp  img_data.cpp  main.cpp  text.hpp
examples/nrf52_ble/: CMakeLists.txt  gatt.cpp  main.cpp
examples/ota/: CMakeLists.txt  main.cpp
examples/photon/: CMakeLists.txt  main.cpp
examples/pthread/: CMakeLists.txt  main.cpp  pthread_cond_test.cpp  pthread_rwlock_test.cpp  pthread_tests.cpp
examples/raspiboot/: CMakeLists.txt  alarm.yaml  framebuffer.cpp  main.cpp  uspi_host.cpp
examples/rfid/: CMakeLists.txt  main.cpp
examples/rtc/: CMakeLists.txt  main.cpp
examples/sd/: CMakeLists.txt  main.cpp
examples/service/: CMakeLists.txt  device.cpp  remote_service.hpp  service.cpp  service.yaml  service_handler.hpp
examples/simple/: simple.ino
examples/simple_portable/: CMakeLists.txt  main.cpp
examples/sntp/: CMakeLists.txt  sntp_demo.cpp
examples/spbtle-rf/: CMakeLists.txt  main.cpp  service.yaml
examples/spi/: CMakeLists.txt  master.cpp  slave.cpp
examples/spirit1/: CMakeLists.txt  main.cpp
examples/sqlite/: CMakeLists.txt  main.cpp
examples/ssd1306/: CMakeLists.txt  main.cpp
examples/stm32_adc_temp/: CMakeLists.txt  main.cpp
examples/stm32_blink/: CMakeLists.txt  main.cpp
examples/stm32_bmp280/: CMakeLists.txt  main.cpp
examples/stm32_dht22/: CMakeLists.txt  main.cpp
examples/stm32_hm10/: CMakeLists.txt  hm10_main.cpp
examples/stm32_i2c_lcd/: CMakeLists.txt  main.cpp
examples/stm32_lora/: CMakeLists.txt  main.cpp
examples/stm32_lrec/: CMakeLists.txt  app.hpp  master.cpp
examples/stm32_spi/: CMakeLists.txt  master.cpp  slave.cpp
examples/stm32_usb/: main.cpp
examples/stm32_xbee/: CMakeLists.txt  main.cpp
examples/stm32f7_disco/: CMakeLists.txt  main.cpp
examples/storage/: CMakeLists.txt  main.cpp  storage.yaml
examples/tcp_x86/: CMakeLists.txt  main.cpp
examples/temp/: CMakeLists.txt  app.hpp  main.cpp  master.cpp  slave.cpp
examples/timer/: timer.ino
examples/wasm3/: CMakeLists.txt  main.cpp
examples/waveshare_epd/: CMakeLists.txt  (+3 more)
libs/: CMakeLists.txt  libemsha
src/: CMakeLists.txt  arch.cpp  arduino_impl.cpp  codegen.cpp  debug.cpp  dismain.cpp  ft.cpp  interrupt.cpp  main.cpp  parser.cpp  print.cpp  scanner.cpp  semaphore.cpp  simple.cpp  stub.cpp  tasmain.cpp  tests.cpp  timer.cpp  tos.hpp  tos_init.cpp  ubsan.cpp  waitable.cpp
tests/: CMakeLists.txt  alarm_tests.cpp  catch_main.cpp  expected_test.cpp  ft_tests.cpp  function_ref_tests.cpp  functional_tests.cpp  future_tests.cpp  hm10_tests.cpp  intrusive_list_test.cpp  jsmn_tests.cpp  lidl_tests.cpp  print_tests.cpp  recursive_mutex_test.cpp  rn2903_test.cpp  streams_test.cpp  timer_multiplexer_tests.cpp  util_test.cpp  xbee_parse_test.cpp
tools/: CMakeLists.txt
(+2068 files in other folders)
