if(${TOS_CORE} MATCHES "atmega")
    add_subdirectory(gpio)
    add_subdirectory(spi)
    add_subdirectory(alarm)
    add_subdirectory(sd)
    add_subdirectory(temp)
    add_subdirectory(int)
    add_subdirectory(simple_portable)
    add_subdirectory(nrf24)
    add_subdirectory(xbee)
    add_subdirectory(ina219)
    add_subdirectory(avr_adxl345)
    add_subdirectory(avr_lcd)
elseif(${TOS_CORE} MATCHES "esp")
    if (IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/libs/mqtt")
        add_subdirectory(esp_mqtt)
        add_subdirectory(esp_mqtt_ssl)
    endif()

    add_subdirectory(esp_lwip)
    add_subdirectory(esp_conn)
    #add_subdirectory(esp_ssl)
    add_subdirectory(esp_spi)
    add_subdirectory(esp_adc)
    #add_subdirectory(bearssl)

    #add_subdirectory(aws_push)

    add_subdirectory(dht11_sample)
    add_subdirectory(esp_udp)

    add_subdirectory(esp_adxl345)
    add_subdirectory(esp_ssd1306)
elseif(${TOS_CORE} MATCHES "x86_hosted")
    #add_subdirectory(bearssl)
    add_subdirectory(simple_portable)
    add_subdirectory(x86_timer)
    #add_subdirectory(capabilities)
elseif(${TOS_CORE} MATCHES "nrf52")
    add_subdirectory(nrf52)
    add_subdirectory(backtrace)
elseif(${TOS_CORE} MATCHES "stm32")
    add_subdirectory(stm32_blink)
    #add_subdirectory(hx711)
    add_subdirectory(stm32_i2c_lcd)
    #add_subdirectory(stm32_lora)
    #add_subdirectory(stm32_hm10)
    add_subdirectory(ssd1306)
    #add_subdirectory(bme280)
    #add_subdirectory(rfid)
    add_subdirectory(ism43362)
    add_subdirectory(spirit1)
    add_subdirectory(spbtle-rf)
    add_subdirectory(epd)
    add_subdirectory(clock)
elseif(${TOS_CORE} MATCHES "cc")
endif()
