if(${TOS_PLATFORM} MATCHES "atmega")
    add_subdirectory(gpio)
    add_subdirectory(spi)
    add_subdirectory(alarm)
    add_subdirectory(sd)
    add_subdirectory(temp)
    add_subdirectory(int)
    add_subdirectory(simple_portable)
    add_subdirectory(nrf24)
    add_subdirectory(xbee)
    add_subdirectory(ina219)
    add_subdirectory(avr_adxl345)
    add_subdirectory(avr_lcd)
elseif(${TOS_PLATFORM} MATCHES "esp")
    if (IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/libs/mqtt")
        add_subdirectory(esp_mqtt)
        add_subdirectory(esp_mqtt_ssl)
    endif()

    add_subdirectory(esp_lwip)
    add_subdirectory(esp_conn)
    add_subdirectory(esp_ssl)
    add_subdirectory(esp_spi)
    add_subdirectory(esp_adc)
    add_subdirectory(bearssl)

    #add_subdirectory(aws_push)

    add_subdirectory(dht11_sample)
    add_subdirectory(esp_udp)

    add_subdirectory(esp_adxl345)
    add_subdirectory(esp_ssd1306)
elseif(${TOS_PLATFORM} MATCHES "x86_hosted")
    #add_subdirectory(bearssl)
    add_subdirectory(simple_portable)
    add_subdirectory(x86_timer)
    #add_subdirectory(capabilities)
    add_subdirectory(tcp_x86)
    add_subdirectory(mux)
    add_subdirectory(fs)
    add_subdirectory(sntp)
    add_subdirectory(display)
    add_subdirectory(service)
elseif(${TOS_PLATFORM} MATCHES "nrf52")
    add_subdirectory(nrf52)
    add_subdirectory(backtrace)
    add_subdirectory(waveshare_epd)
elseif(${TOS_PLATFORM} MATCHES "stm32")
    add_subdirectory(stm32_blink)
    #add_subdirectory(hx711)
    add_subdirectory(stm32_i2c_lcd)
    #add_subdirectory(stm32_lora)
    #add_subdirectory(stm32_hm10)
    add_subdirectory(ssd1306)
    add_subdirectory(bme280)
    #add_subdirectory(rfid)
    #add_subdirectory(ism43362)
    add_subdirectory(spirit1)
    add_subdirectory(spbtle-rf)
    add_subdirectory(epd)
    add_subdirectory(clock)
	add_subdirectory(mpu)
    add_subdirectory(waveshare_epd)
    if (${HAL_NAME} MATCHES "stm32f7")
        add_subdirectory(stm32f7_disco)
    endif()
    add_subdirectory(rtc)
    add_subdirectory(storage)
    add_subdirectory(service)
elseif(${TOS_PLATFORM} MATCHES "cc")
    add_subdirectory(cc3235sf)
elseif(${TOS_PLATFORM} MATCHES "raspi")
    add_subdirectory(raspiboot)
endif()
