add_subdirectory(preprocessor)
add_subdirectory(pfr)
add_subdirectory(kthreads)
add_subdirectory(posix)
add_subdirectory(caps)
add_subdirectory(toscxx)
add_subdirectory(sml)
add_subdirectory(CWPack)
add_subdirectory(libemsha)
add_subdirectory(frozen)
add_subdirectory(range-v3-0.5.0)
add_subdirectory(etl)
add_subdirectory(gfx)
add_subdirectory(flatbuffers)
add_subdirectory(doctest)

if (NOT ${TOS_CORE} MATCHES "esp8266|atmega")
    add_subdirectory(json)
endif()
