add_subdirectory(ubench)
add_subdirectory(lidlrt)

add_subdirectory(caplets)
add_subdirectory(CWPack)
add_subdirectory(doctest)
add_subdirectory(elf)
add_subdirectory(etl)
add_subdirectory(flatbuffers)
add_subdirectory(frozen)
add_subdirectory(gfx)
add_subdirectory(gfx2)
add_subdirectory(gui)
add_subdirectory(libemsha)
add_subdirectory(mmio)
add_subdirectory(pfr)
add_subdirectory(preprocessor)
add_subdirectory(pthread)
add_subdirectory(sha256)
add_subdirectory(shell)
add_subdirectory(sml)
add_subdirectory(sntp)
