add_lidlc(service_schema service.yaml)

add_executable(service_host service.cpp remote_service.hpp)
target_link_libraries(service_host PRIVATE tos_core arch_drivers service_schema tos_dynamic_log lidl_log_sink)

add_executable(service_device device.cpp remote_service.hpp)
target_link_libraries(service_device PRIVATE tos_core arch_drivers service_schema tos_dynamic_log lidl_log_sink)